fixing card header width to prevent bleed. for MUWM-3571.

--- a/myuw/static/css/mobile.less
+++ b/myuw/static/css/mobile.less
@@ -1629,7 +1629,7 @@ body {
 	    background-color: #fcf9e3;
 	    .error-rollup {
 	        i { position: absolute; top: 33px; font-size: 2em; color: #a94442; margin-top: -14px;}
-	        h3 { position: relative; left: 42px; color: #a94442;}
+	        h3 { position: relative; left: 42px; color: #a94442; width:92%;}
 			}
 		}
 	}	
